--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.1",
-    "lucide-react": "^0.555.0",
+    "@google/genai": "^1.31.0",
+    "animejs": "^4.2.2",
     "framer-motion": "^12.23.25",
-    "react-dom": "^19.2.1",
-    "@google/genai": "^1.31.0"
+    "lucide-react": "^0.555.0",
+    "motion": "^12.23.26",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
