--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@google/genai": "^1.31.0",
+    "@gsap/react": "^2.1.2",
     "animejs": "^4.2.2",
     "framer-motion": "^12.23.25",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.555.0",
     "motion": "^12.23.26",
     "react": "^19.2.1",
