--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^1.31.0",
     "@gsap/react": "^2.1.2",
     "animejs": "^4.2.2",
+    "axios": "^1.13.4",
     "framer-motion": "^12.23.25",
     "gsap": "^3.14.2",
     "lucide-react": "^0.555.0",
