--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,113 +1,5 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.2
-aiosignal==1.4.0
-anyio==4.10.0
-argcomplete==3.6.3
-asgiref==3.8.1
-attrs==25.4.0
-boto==2.49.0
-CacheControl==0.14.3
-cachetools==5.5.2
-certifi==2025.6.15
-cffi==2.0.0
-charset-normalizer==3.4.3
-click==8.3.1
-colorama==0.4.6
-crcmod==1.7
-cryptography==43.0.3
-distlib==0.3.9
-dj-database-url==3.0.1
-Django==4.2.7
-django-cors-headers==4.9.0
-djangorestframework==3.14.0
-fasteners==0.20
-filelock==3.18.0
-firebase_admin==7.1.0
-frozenlist==1.8.0
-fsspec==2025.10.0
-ftfy==6.3.1
-gcloud==0.18.3
-gcs-oauth2-boto-plugin==3.3
-google-api-core==2.25.1
-google-apitools==0.5.35
-google-auth==2.39.0
-google-auth-httplib2==0.3.0
-google-cloud-core==2.4.3
-google-cloud-firestore==2.21.0
-google-cloud-storage==3.4.0
-google-crc32c==1.7.1
-google-reauth==0.1.1
-google-resumable-media==2.7.2
-googleapis-common-protos==1.70.0
-grpcio==1.75.0
-grpcio-status==1.75.0
-gsutil==5.35
-gunicorn==23.0.0
-h11==0.16.0
-h2==4.3.0
-hf-xet==1.2.0
-hpack==4.1.0
-httpcore==1.0.9
-httplib2==0.20.4
-httpx==0.28.1
-hyperframe==6.1.0
-idna==3.10
-Jinja2==3.1.6
-jwcrypto==1.5.6
-MarkupSafe==3.0.3
-monotonic==1.6
-mpmath==1.3.0
-msgpack==1.1.1
-multidict==6.7.0
-mysqlclient==2.2.7
-networkx==3.5
-numpy==2.2.6
-oauth2client==4.1.3
-opencv-python==4.12.0.88
-packaging==25.0
-pandas==2.3.0
-pillow==11.2.1
-pipenv==2025.0.3
-platformdirs==4.3.8
-propcache==0.4.1
-proto-plus==1.26.1
-protobuf==6.32.1
-psycopg2-binary==2.9.10
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.23
-pycryptodome==3.23.0
-PyJWT==2.10.1
-PyMySQL==1.1.2
-pyOpenSSL==24.2.1
-pyparsing==3.2.5
-Pyrebase4==4.8.0
-python-dateutil==2.9.0.post0
-python-decouple==3.8
-python-jwt==4.1.0
-pytz==2025.2
-pyu2f==0.1.5
-PyYAML==6.0.3
-qrcode==8.2
-regex==2025.11.3
-requests==2.32.5
-requests-toolbelt==0.10.1
-retry_decorator==1.1.1
-rsa==4.7.2
-safetensors==0.7.0
-setuptools==80.9.0
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-sqlparse==0.5.3
-sympy==1.14.0
-tqdm==4.67.1
-trimesh==4.10.0
-typer-slim==0.20.0
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==1.26.20
-virtualenv==20.31.2
-wcwidth==0.2.14
-whitenoise==6.9.0
-yarl==1.22.0
+Django>=4.0
+djangorestframework
+django-cors-headers
+gunicorn
+whitenoise
