--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: python
     rootDir: backend
     buildCommand: ./build.sh
-    startCommand: gunicorn portfolio_backend.wsgi:application
+    startCommand: python -m gunicorn portfolio_backend.wsgi:application --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.13
