--- a/render.yaml
+++ b/render.yaml
@@ -15,6 +15,10 @@ services:
         value: 4
       - key: DEBUG
         value: 'False'
+      - key: DATABASE_URL
+        fromDatabase:
+          name: portfolio-db
+          property: connectionString
 
   # Frontend Service (React/Vite)
   - type: static
@@ -33,3 +37,9 @@ services:
           type: web
           name: portfolio-backend
           property: url
+
+databases:
+  - name: portfolio-db
+    databaseName: portfolio
+    user: portfolio_user
+    region: oregon
